// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VApp.ts should allow a custom id 1`] = `
<div data-app="true"
     class="v-application v-application--is-ltr theme--light direction--ltr"
     id="inspire"
>
  <div class="v-application--wrap">
  </div>
</div>
`;

exports[`VApp.ts should match a snapshot 1`] = `
<div data-app="true"
     class="v-application v-application--is-ltr theme--light direction--ltr"
     id="app"
>
  <div class="v-application--wrap">
  </div>
</div>
`;
